WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
140573
bmalloc: added the tiniest bit of testing for aligned allocation
https://bugs.webkit.org/show_bug.cgi?id=140573
Summary
bmalloc: added the tiniest bit of testing for aligned allocation
Geoffrey Garen
Reported
2015-01-16 16:01:49 PST
bmalloc: added the tiniest bit of testing for aligned allocation
Attachments
Patch
(10.52 KB, patch)
2015-01-16 16:03 PST
,
Geoffrey Garen
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2015-01-16 16:03:10 PST
Created
attachment 244816
[details]
Patch
Andreas Kling
Comment 2
2015-01-16 16:05:26 PST
Comment on
attachment 244816
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2015-01-16 16:06:09 PST
Attachment 244816
[details]
did not pass style-queue: ERROR: PerformanceTests/MallocBench/MallocBench/memalign.cpp:26: Found other header before WebCore config.h. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] ERROR: PerformanceTests/MallocBench/MallocBench/memalign.cpp:27: Found header this file implements after other header. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] ERROR: PerformanceTests/MallocBench/MallocBench/memalign.cpp:31: Bad include order. Mixing system and custom headers. [build/include_order] [4] ERROR: PerformanceTests/MallocBench/MallocBench/memalign.cpp:33: benchmark_memalign is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] ERROR: PerformanceTests/MallocBench/MallocBench/memalign.cpp:41: Tests for true/false, null/non-null, and zero/non-zero should all be done without equality comparisons. [readability/comparison_to_zero] [5] ERROR: PerformanceTests/MallocBench/MallocBench/memalign.cpp:52: Tests for true/false, null/non-null, and zero/non-zero should all be done without equality comparisons. [readability/comparison_to_zero] [5] ERROR: PerformanceTests/MallocBench/MallocBench/Benchmark.cpp:39: Alphabetical sorting problem. [build/include_order] [4] ERROR: PerformanceTests/MallocBench/MallocBench/memalign.h:29: benchmark_memalign is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Total errors found: 8 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 4
2015-01-16 16:10:54 PST
Committed
r178611
: <
http://trac.webkit.org/changeset/178611
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug