bmalloc: added the tiniest bit of testing for aligned allocation https://bugs.webkit.org/show_bug.cgi?id=140573

Reviewed by Andreas Kling.

Just good enoug to catch two bugs in a preliminary implementation.

* MallocBench/MallocBench.xcodeproj/project.pbxproj:
* MallocBench/MallocBench/Benchmark.cpp:
* MallocBench/MallocBench/mbmalloc.cpp:
* MallocBench/MallocBench/mbmalloc.h:
* MallocBench/MallocBench/memalign.cpp: Added.
(benchmark_memalign):
* MallocBench/MallocBench/memalign.h: Added.


Canonical link: https://commits.webkit.org/158545@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@178611 268f45cc-cd09-0410-ab3c-d52691b4dbfc